# gr-dcu-libcommon

./: .gitignore  CMakeLists.txt  auto_build.sh
cmake/: dcu-libcommonConfig.cmake  dcu-libcommonConfig.cmake.in
include/common/ipc/: shared_protocol.hpp  shared_state.hpp
install/include/common/container/: safe_queue.hpp
